# Process this file with automake to produce Makefile.in.
# Makefile.am for hello/doc.
#
# Copyright 1996, 1997, 2005, 2007, 2008 Free Software Foundation, Inc.
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 3, or (at your option)
# any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

SUBDIRS = mediatex-figures

info_TEXINFOS = mediatex.texi
mediatex_TEXINFOS = \
	version.texi \
	macros.texi  \
	abstract.texi overview.texi invoking.texi \
	main.texi specs.texi \
	tools.texi scripts.texi server.texi client.texi \
	syslog.texi apache.texi exim.texi ssh.texi cvs.texi cron.texi \
	initd.texi cgiClient.texi cronHourly-cronDaily.texi \
	init-remove-purge.texi new-free-clean.texi \
	update-commit.texi addUser-delUser.texi bind-unbind.texi \
	mount-umount.texi deliver.texi \
	cache.texi extract.texi cgiServer.texi \
	have.texi notify.texi delivering.texi \
	serv.texi conf.texi supp.texi misc.texi motd.texi \
	data.texi mdtx.conf.texi supports.txt.texi mdtx-COLL.md5.texi \
	catalog.txt.texi extract.txt.texi servers.txt.texi \
	useCase.texi consistency.texi bugs.texi fdl.texi

# to force install-html ?
# install-data-local: install-html
